# sigmate

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app_config.rs  cli.rs  error.rs  lib.rs  main.rs
src/commands/: clean.rs  configure.rs  sign.rs  trust.rs  verify.rs
src/domain/: mod.rs  sbom.rs  signature.rs  trust.rs
src/infrastructure/: checksum_parser.rs  hashing.rs  mod.rs
src/infrastructure/crypto/: key_handler.rs  mod.rs  signing.rs
src/infrastructure/persistence/: json_trust_store.rs  mod.rs
src/services/: mod.rs  orphan_service.rs  signing_service.rs  verification_service.rs
src/ui/: logger.rs  mod.rs  trust_presenter.rs
src/utils/: files.rs  git.rs  mod.rs
