[package]
name = "sigmate"
version = "1.0.0"
edition = "2021"
authors = ["Lucian BLETAN"]
description = "A modern, developer-focused CLI for cryptographic file signing and verification."
license = "MIT"
homepage = "https://github.com/opensecurity/sigmate"
repository = "https://github.com/opensecurity/sigmate"
keywords = ["signing", "verification", "sbom", "cryptography", "trust"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
digest = "0.10.7"
dirs = "6.0.0"
ed25519-dalek = "2.1.1"
fs_extra = "1.3.0"
git2 = "0.20.2"
glob = "0.3.2"
hostname = "0.4.0"
ignore = "0.4.23"
md5 = "0.8.0"
openssl = { version = "0.10.73", features = ["vendored"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"